# discord-bot

./: Cargo.toml  Dockerfile  daily_script.sh  deployment.yaml  docker-compose.yml
.github/workflows/: build-and-push.yml  dependabot-automerge.yml  docker-release.yml
src/: main.rs
src/commands/: ares.rs  ciphey.rs  help.rs  identify.rs  math.rs  meta.rs  mod.rs  owner.rs  sth.rs  what.rs
src/models/: cipher_type.rs
