[package]
name = "ultimate_hacking_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gethostname = "1.0.0"
lemmeknow = "0.8.0"
log = "0.4.17"
project_ares = "0.10.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = "1.0.151"
serde_json = "1.0.140"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
dotenv = "0.15.0"
cipher_identifier = "0.2.0"

[dependencies.tokio]
version = "1.25"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]
version = "0.12.4"
