[package]
name = "ultimate_hacking_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gethostname = "1.0.0"
lemmeknow = "0.8.0"
log = "0.4.28"
project_ares = "0.12.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = "1.0.226"
serde_json = "1.0.145"
tracing = "0.1.37"
tracing-subscriber = "0.3.20"
dotenv = "0.15.0"
cipher_identifier = "0.2.0"

[dependencies.tokio]
version = "1.47"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]
version = "0.12.4"
